BP-630 - Add ID to payment methods (front-end)

--- a/view/frontend/web/template/payment/buckaroo_magento2_capayablein3.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_capayablein3.html
@@ -162,7 +162,8 @@
 
         <div class="actions-toolbar">
             <div class="primary">
-                <button class="action primary checkout"
+                <button id="button-action-checkout-capayablein3"
+                        class="action primary checkout"
                         type="submit"
                         data-bind="
                         click: placeOrder,
