--- a/view/frontend/web/template/payment/buckaroo_magento2_emandate.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_emandate.html
@@ -46,7 +46,8 @@
 
         <div class="actions-toolbar">
             <div class="primary">
-                <button class="action primary checkout"
+                <button id="button-action-checkout-emandate"
+                        class="action primary checkout"
                         type="submit"
                         data-bind="
                         click: placeOrder,
