--- a/view/frontend/web/template/payment/buckaroo_magento2_klarnakp.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_klarnakp.html
@@ -17,7 +17,8 @@
 
         <div class="actions-toolbar">
             <div class="primary">
-                <button class="action primary checkout"
+                <button id="button-action-checkout-klarnakp"
+                        class="action primary checkout"
                         data-bind="
                         click: placeOrder,
                         attr: {title: $t('Place Order')},
