--- a/view/frontend/web/template/payment/buckaroo_magento2_afterpay2.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_afterpay2.html
@@ -221,7 +221,8 @@
 
         <div class="actions-toolbar">
             <div class="primary">
-                <button class="action primary checkout"
+                <button id="button-action-checkout-afterpay2"
+                        class="action primary checkout"
                         type="submit"
                         data-bind="
                         click: placeOrder,
