--- a/view/frontend/web/template/payment/buckaroo_magento2_applepay.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_applepay.html
@@ -56,7 +56,8 @@
 
         <div class="actions-toolbar">
             <div class="primary">
-                <button class="action primary checkout"
+                <button id="button-action-checkout-apple-pay"
+                        class="action primary checkout"
                         type="submit"
                         data-bind="
                         click: placeOrder,
