--- a/view/frontend/web/template/payment/buckaroo_magento2_eps.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_eps.html
@@ -17,7 +17,8 @@
 
         <div class="actions-toolbar">
             <div class="primary">
-                <button class="action primary checkout"
+                <button id="button-action-checkout-eps"
+                        class="action primary checkout"
                         type="submit"
                         data-bind="
                         click: placeOrder,
