--- a/view/frontend/web/template/payment/buckaroo_magento2_giropay.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_giropay.html
@@ -54,7 +54,8 @@
 
         <div class="actions-toolbar">
             <div class="primary">
-                <button class="action primary checkout"
+                <button id="button-action-checkout-giropay"
+                        class="action primary checkout"
                         type="submit"
                         data-bind="
                         click: placeOrder,
