--- a/view/frontend/web/template/payment/buckaroo_magento2_paymentguarantee.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_paymentguarantee.html
@@ -171,7 +171,8 @@
 
         <div class="actions-toolbar">
             <div class="primary">
-                <button class="action primary checkout"
+                <button id="button-action-checkout-paymentguarantee"
+                        class="action primary checkout"
                         type="submit"
                         data-bind="
                         click: placeOrder,
