--- a/view/frontend/web/template/payment/buckaroo_magento2_transfer.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_transfer.html
@@ -27,7 +27,8 @@
 
         <div class="actions-toolbar">
             <div class="primary">
-                <button class="action primary checkout"
+                <button id="button-action-checkout-transfer"
+                        class="action primary checkout"
                         type="submit"
                         data-bind="
                         click: placeOrder,
