--- a/view/frontend/web/template/payment/buckaroo_magento2_trustly.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_trustly.html
@@ -16,7 +16,8 @@
 
         <div class="actions-toolbar">
             <div class="primary">
-                <button class="action primary checkout"
+                <button id="button-action-checkout-trustly"
+                        class="action primary checkout"
                         type="submit"
                         data-bind="
                         click: placeOrder,
