BP-630 - Added id for giftcards redirect mode

--- a/view/frontend/web/template/payment/buckaroo_magento2_giftcards.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_giftcards.html
@@ -27,7 +27,8 @@
 
         <div class="actions-toolbar">
             <div class="primary">
-                <button class="action primary checkout"
+                <button id="button-action-checkout-giftcards-redirect"
+                        class="action primary checkout"
                         type="submit"
                         data-bind="
                         click: placeOrder,
