--- a/view/frontend/web/template/payment/buckaroo_magento2_mrcash.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_mrcash.html
@@ -14,6 +14,86 @@
             <!--/ko-->
         </div>
 
+        <!-- ko if: useClientSide -->
+
+        <div class="payment-method-second-col billing-address-form">
+            <form data-bind="mageInit: { 'validation': [] },
+                  attr: {'data-hasrequired': $t('* Required Fields')}">
+                <fieldset class="fieldset payment card styled">
+
+                    <div class="fieldset card_front width-100">
+
+                        <div class="field required width-100" >
+                            <label class="label" for="buckaroo_magento2_mrcash_cardholdername"> <span data-bind="i18n: 'Cardholder:'"> </span> </label>
+                            <div class="control">
+                                <input id="buckaroo_magento2_mrcash_cardholdername"
+                                       type="text"
+                                       class="input-text field"
+                                       name="payment[buckaroo_magento2_mrcash][cardholdername]"
+                                       data-bind="
+                            valueUpdate: 'blur',
+                            value: CardHolderName,
+                            textInput: CardHolderName(),
+                            attr: { 'data-validate': JSON.stringify({ 'required': true, 'validateCardHolderName': true }) },
+                            event: { blur: encryptCardDetails }">
+                            </div>
+                        </div>
+
+                        <div class="field required width-100" >
+                            <label class="label" for="buckaroo_magento2_mrcash_cardnumber"> <span data-bind="i18n: 'Card number:'"> </span> </label>
+                            <div class="control">
+                                <input id="buckaroo_magento2_mrcash_cardnumber"
+                                       type="text"
+                                       class="input-text field"
+                                       name="payment[buckaroo_magento2_mrcash][cardnumber]"
+                                       data-bind="
+                            valueUpdate: 'blur',
+                            value: CardNumber,
+                            textInput: CardNumber(),
+                            attr: { 'data-validate': JSON.stringify({ 'required': true, 'validateCardNumber': true }) },
+                            event: { blur: encryptCardDetails }">
+                            </div>
+                        </div>
+
+                        <div class="field required width-50-l" >
+                            <label class="label" for="buckaroo_magento2_mrcash_expirationmonth"><span data-bind="i18n: 'Month:'"></span></label>
+                            <div class="control">
+                                <select id="buckaroo_magento2_mrcash_expirationmonth" class="field"
+                                        data-bind="value: ExpirationMonth,
+                                        attr: { 'data-validate': JSON.stringify({ 'required-entry': true }) },
+                                        event: { change: validateMonth }"
+                                        name="payment[buckaroo_magento2_mrcash][expirationmonth]">
+                                    <!-- ko foreach: months -->
+                                    <option data-bind="i18n: label, 'value': value"></option>
+                                    <!--/ko-->
+                                </select>
+                            </div>
+                        </div>
+
+                        <div class="field required width-50-r" >
+                            <label class="label" for="buckaroo_magento2_mrcash_expirationyear"><span data-bind="i18n: 'Year:'"></span></label>
+                            <div class="control">
+                                <select id="buckaroo_magento2_mrcash_expirationyear" class="field"
+                                        data-bind="value: ExpirationYear,
+                                                   attr: { 'data-validate': JSON.stringify({ 'required-entry': true }) },
+                                                   event: { change: validateYear },
+                                                   foreach: getYears()"
+                                        name="payment[buckaroo_magento2_mrcash][expirationyear]">
+                                    <option data-bind="i18n: label, 'value': value"></option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="field width-100">
+                        <span data-bind="i18n: 'Please make sure all fields are filled in correctly before proceeding.' ">  </span>
+                    </div>
+                </fieldset>
+            </form>
+        </div>
+
+        <!--/ko-->
+
         <div class="actions-toolbar">
             <div class="primary">
                 <button id="button-action-checkout-mrcash"
