--- a/view/frontend/web/template/payment/buckaroo_magento2_afterpay.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_afterpay.html
@@ -104,10 +104,12 @@
                                             dateFormat: 'dd/MM/yy'
                                         }
                                    },
+                                   event: { change: selectPaymentMethod },
                                    valueUpdate: 'change',
                                    value: dateValidate,
                                    attr: { 'data-validate': JSON.stringify({ 'required': true, 'validate-date-au': true })}"
                                    name="payment[buckaroo_magento2_afterpay][customer_DoB]">
+                            <div for="buckaroo_magento2_afterpay_DoB" generated="true" class="mage-error" id="buckaroo_magento2_afterpay_DoB-error" style="display: none;"><span data-bind="i18n: 'You should be at least 18 years old.' "></span></div>
                         </div>
                     </div>
                     <!-- /ko -->
