--- a/view/frontend/web/template/payment/buckaroo_magento2_giftcards.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_giftcards.html
@@ -61,7 +61,7 @@
             <input type="radio"
                    name="payment[method]"
                    class="radio"
-                   data-bind="attr: {'id': code, 'data-method': 'buckaroo_magento2_giftcards'}, value: code,  click: $parent.selectGiftCardPaymentMethod.bind($parent, code), checked: $parent.isChecked, visible: $parent.isRadioButtonVisible()"/>
+                   data-bind="attr: {'id': code, 'data-method': 'buckaroo_magento2_giftcards'}, value: code,  click: $parent.selectGiftCardPaymentMethod.bind($parent, code), checked: $parent.isCheckedGiftCardPaymentMethod.bind($parent, code), visible: $parent.isRadioButtonVisible()"/>
             <label class="buckaroo_magento2_image_title label" data-bind="attr: {'for': code }" >
                 <span data-bind="text: title"></span></label>
         </div>
