--- a/view/frontend/web/template/payment/buckaroo_magento2_afterpay.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_afterpay.html
@@ -16,7 +16,6 @@
         </div>
 
         <div class="payment-method-second-col billing-address-form">
-<!--            <form data-hasrequired="* Required Fields" data-bind="mageInit: { 'validation': [] }">-->
             <form data-bind="mageInit: { 'validation': [] },
                   attr: {'data-hasrequired': $t('* Required Fields')}">
                 <fieldset class="fieldset payment">
@@ -108,8 +107,9 @@
                                    valueUpdate: 'change',
                                    value: dateValidate,
                                    attr: { 'data-validate': JSON.stringify({ 'required': true, 'validate-date-au': true })}"
-                                   name="payment[buckaroo_magento2_afterpay][customer_DoB]">
-                            <div for="buckaroo_magento2_afterpay_DoB" generated="true" class="mage-error" id="buckaroo_magento2_afterpay_DoB-error" style="display: none;"><span data-bind="i18n: 'You should be at least 18 years old.' "></span></div>
+                                   name="payment[buckaroo_magento2_afterpay][customer_DoB]"
+                                   aria-required="true" aria-invalid="true" aria-describedby="buckaroo_magento2_afterpay_DoB-error">
+                            <div for="buckaroo_magento2_afterpay_DoB" class="mage-error" id="buckaroo_magento2_afterpay_DoB-error" style="display: none;"><span data-bind="i18n: 'You should be at least 18 years old.' "></span></div>
                         </div>
                     </div>
                     <!-- /ko -->
