--- a/view/frontend/templates/checkout/payconiq/pay.phtml
+++ b/view/frontend/templates/checkout/payconiq/pay.phtml
@@ -12,7 +12,7 @@
 
 <script>
     require(['buckaroo/payconiq/pay'], function (payconiqPay) {
-        var transactionKey = "<?php echo $this->getTransactionKey(); ?>";
+        var transactionKey = "<?php echo $block->getTransactionKey(); ?>";
 
         payconiqPay.setTransactionKey(transactionKey);
         payconiqPay.showQrCode();
