--- a/view/frontend/templates/checkout/cart/applepay.phtml
+++ b/view/frontend/templates/checkout/cart/applepay.phtml
@@ -18,7 +18,7 @@
  * @license   https://tldrlegal.com/license/mit-license
  */
 ?>
-<?php if ($this->canShowButton()): ?>
+<?php if ($block->canShowButton()): ?>
 <div class="box-tocart">
     <div class="fieldset">
         <div class="actions">
@@ -29,7 +29,7 @@
 
 <script>
     if ('undefined' === typeof window.checkoutConfig) {
-        window.checkoutConfig = <?php echo $this->getCheckoutConfig(); ?>;
+        window.checkoutConfig = <?php echo $block->getCheckoutConfig(); ?>;
         window.isCustomerLoggedIn = window.checkoutConfig.isCustomerLoggedIn;
     }
     showPayButton = function() {
