--- a/view/adminhtml/templates/sales/order/creditmemo/buckaroo_fee_afterpay.phtml
+++ b/view/adminhtml/templates/sales/order/creditmemo/buckaroo_fee_afterpay.phtml
@@ -25,7 +25,7 @@
 <?php foreach ($block->getTotals() as $_code => $_total): ?>
     <?php if (isset($_total['block_name']) && $_total['block_name'] == 'buckaroo_fee_afterpay'): ?>
         <tr>
-            <td class="label"><?= $_total['label'] ?>
+            <td class="label"><?php $_total['label'] ?>
                 <input type="checkbox" name="creditmemo[buckaroo_fee_refundable]" id="isRefund" checked style="display: none">
                 <div id="buckaroo_fee_adv">
                 </div>
