--- a/view/adminhtml/templates/giftcards_sort_widget.phtml
+++ b/view/adminhtml/templates/giftcards_sort_widget.phtml
@@ -20,7 +20,7 @@
 ?>
 <div class="giftcards_sort_wrapper">
     <input type="hidden" name="groups[buckaroo_magento2_payment_section][groups][buckaroo_magento2_giftcards][fields][sort_giftcards][value]" id="sort_giftcards"
-           value="<?php echo $this->helper('Buckaroo\Magento2\Helper\Data')->getConfigGiftCardsSort()?>">
+           value="<?= $this->helper('Buckaroo\Magento2\Helper\Data')->getConfigGiftCardsSort()?>">
     <div id="sort_giftcards_list"></div>
 </div>
 
