--- a/view/adminhtml/templates/creditcard_sort_widget.phtml
+++ b/view/adminhtml/templates/creditcard_sort_widget.phtml
@@ -20,7 +20,7 @@
 ?>
 <div class="creditcard_sort_wrapper">
     <input type="hidden" name="groups[buckaroo_magento2_payment_section][groups][buckaroo_magento2_creditcard][fields][sort_creditcards][value]" id="sort_cards"
-           value="<?php echo $this->helper('Buckaroo\Magento2\Helper\Data')->getConfigCardSort()?>">
+           value="<?= $this->helper('Buckaroo\Magento2\Helper\Data')->getConfigCardSort()?>">
     <div id="sort_creditcard_list">
 
     </div>
