--- a/view/adminhtml/templates/sales/order/create/billingmethod/payperemail.phtml
+++ b/view/adminhtml/templates/sales/order/create/billingmethod/payperemail.phtml
@@ -22,19 +22,19 @@
 <?php $code = $block->escapeHtml($block->getMethodCode()); ?>
 
 <fieldset class="admin__fieldset payment-method"
-          id="payment_form_<?php /* @noEscape */ echo $code; ?>"
+          id="payment_form_<?= $code; ?>"
           style="display:none">
 
     <div class="admin__field _required">
         <label class="label admin__field-label" for="buckaroo_magento2_payperemail_genderSelect">
-            <span><?php echo $block->escapeHtml(__('Salutation:')); ?></span>
+            <span><?= $block->escapeHtml(__('Salutation:')); ?></span>
         </label>
         <div class="admin__field-control control">
 
             <select id="buckaroo_magento2_payperemail_genderSelect" name="payment[customer_gender]"
                     class="required-entry select admin__control-select">
-                    <option value="1"><?php echo $block->escapeHtml(__('Mr.')); ?></option>
-                    <option value="2"><?php echo $block->escapeHtml(__('Mrs.')); ?></option>
+                    <option value="1"><?= $block->escapeHtml(__('Mr.')); ?></option>
+                    <option value="2"><?= $block->escapeHtml(__('Mrs.')); ?></option>
             </select>
         </div>
     </div>
@@ -42,13 +42,13 @@
     <?php $customerDetails = $block->getMethod()->helper->getPPeCustomerDetails(); ?>
     <div class="admin__field _required">
         <label class="label admin__field-label" for="buckaroo_magento2_payperemail_BillingFirstName">
-            <span><?php echo $block->escapeHtml(__('Billing First Name:')); ?></span>
+            <span><?= $block->escapeHtml(__('Billing First Name:')); ?></span>
         </label>
         <div class="admin__field-control control">
             <input id="buckaroo_magento2_payperemail_BillingFirstName"
                    class="input-text field"
                    type="text"
-                   value="<?php echo $customerDetails ? $block->escapeHtml($customerDetails['firstName']) : ''; ?>"
+                   value="<?= $customerDetails ? $block->escapeHtml($customerDetails['firstName']) : ''; ?>"
                    data-bind="valueUpdate: 'keyup', attr: { 'data-validate': JSON.stringify({ 'required': true }) }"
                    name="payment[customer_billingFirstName]"
             >
@@ -57,13 +57,13 @@
 
     <div class="admin__field _required">
         <label class="label admin__field-label" for="buckaroo_magento2_payperemail_BillingLastName">
-            <span><?php echo $block->escapeHtml(__('Billing Last Name:')); ?></span>
+            <span><?= $block->escapeHtml(__('Billing Last Name:')); ?></span>
         </label>
         <div class="admin__field-control control">
             <input id="buckaroo_magento2_payperemail_BillingLastName"
                    class="input-text field"
                    type="text"
-                   value="<?php echo $customerDetails ? $block->escapeHtml($customerDetails['lastName']) : ''; ?>"
+                   value="<?= $customerDetails ? $block->escapeHtml($customerDetails['lastName']) : ''; ?>"
                    data-bind="valueUpdate: 'keyup', attr: { 'data-validate': JSON.stringify({ 'required': true }) }"
                    name="payment[customer_billingLastName]"
             >
@@ -72,13 +72,13 @@
 
     <div class="admin__field _required">
         <label class="label admin__field-label" for="buckaroo_magento2_payperemail_Email">
-            <span><?php echo $block->escapeHtml(__('Email:')); ?></span>
+            <span><?= $block->escapeHtml(__('Email:')); ?></span>
         </label>
         <div class="admin__field-control control">
             <input id="buckaroo_magento2_payperemail_Email"
                    class="input-text field"
                    type="text"
-                   value="<?php echo $customerDetails ? $block->escapeHtml($customerDetails['email']) : ''; ?>"
+                   value="<?= $customerDetails ? $block->escapeHtml($customerDetails['email']) : ''; ?>"
                    data-bind="
                        valueUpdate: 'keyup',
                        attr: { 'data-validate': JSON.stringify({ 'required': true, 'validate-email': true }) }
