--- a/view/adminhtml/templates/sales/order/invoice/klarnakp_discount_info.phtml
+++ b/view/adminhtml/templates/sales/order/invoice/klarnakp_discount_info.phtml
@@ -1,7 +1,7 @@
 <div class="message-system-inner">
     <div class="message-system-short-wrapper">
         <div class="message">
-            <?php echo $block->escapeHtml(
+            <?= $block->escapeHtml(
                 __(
                     "Orders with discount and paid with Klarna can not be partially invoiced. %1 More Information %2",
                     "<a href='https://support.buckaroo.nl' target='_blank'>",
