--- a/view/frontend/templates/cart/buckaroo_config.phtml
+++ b/view/frontend/templates/cart/buckaroo_config.phtml
@@ -21,6 +21,6 @@
 <div id="buckaroo-fee-cart" data-bind="scope:'buckarooFeeCart'">
     <!-- ko template: getTemplate() --><!-- /ko -->
     <script>
-        window.buckarooConfig = <?php /* @noEscape */ echo $block->getBuckarooConfigJson(); ?>;
+        window.buckarooConfig = <?= $block->getBuckarooConfigJson(); ?>;
     </script>
 </div>
