--- a/view/adminhtml/templates/creditcard_sort_widget.phtml
+++ b/view/adminhtml/templates/creditcard_sort_widget.phtml
@@ -17,10 +17,14 @@
  * @copyright Copyright (c) Buckaroo B.V.
  * @license   https://tldrlegal.com/license/mit-license
  */
+// @codingStandardsIgnoreFile
 ?>
 <div class="creditcard_sort_wrapper">
-    <input type="hidden" name="groups[buckaroo_magento2_payment_section][groups][buckaroo_magento2_creditcard][fields][sort_creditcards][value]" id="sort_cards"
-           value="<?php echo $block->getConfigCardSort()?>">
+    <input
+        type="hidden"
+        name="groups[buckaroo_magento2_payment_section][groups][buckaroo_magento2_creditcard][fields][sort_creditcards][value]"
+        id="sort_cards"
+        value="<?php echo $block->getConfigCardSort()?>">
     <div id="sort_creditcard_list">
 
     </div>
