--- a/view/adminhtml/templates/sales/order/create/billingmethod/payperemail.phtml
+++ b/view/adminhtml/templates/sales/order/create/billingmethod/payperemail.phtml
@@ -17,6 +17,7 @@
  * @copyright Copyright (c) Buckaroo B.V.
  * @license   https://tldrlegal.com/license/mit-license
  */
+// @codingStandardsIgnoreFile
 ?>
 
 <?php $code = $block->escapeHtml($block->getMethodCode()); ?>
