--- a/view/adminhtml/templates/supportTab.phtml
+++ b/view/adminhtml/templates/supportTab.phtml
@@ -1,5 +1,6 @@
 <?php
 /** @var \Buckaroo\Magento2\Block\Adminhtml\Config\Support\SupportTab $block */
+// @codingStandardsIgnoreFile
 ?>
 <div id="supporttab" class="buckaroo-magento2-supporttab" data-mage-init='{"buckarooConfig": true}'>
 
