--- a/view/frontend/templates/catalog/product/view/applepay.phtml
+++ b/view/frontend/templates/catalog/product/view/applepay.phtml
@@ -24,7 +24,7 @@
 
     <script>
         if ('undefined' === typeof window.checkoutConfig) {
-            window.checkoutConfig = <?= $block->getApplepayConfig(); ?>;
+            window.checkoutConfig = <?= /* @noEscape */ ($block->getApplepayConfig()); ?>;
             window.isCustomerLoggedIn = window.checkoutConfig.isCustomerLoggedIn;
             if ('undefined' === typeof window.checkoutConfig.totalsData) {
                 window.checkoutConfig.totalsData = {};
