--- a/view/frontend/templates/checkout/payconiq/pay.phtml
+++ b/view/frontend/templates/checkout/payconiq/pay.phtml
@@ -5,14 +5,14 @@
         <div id="buckaroo_magento2_payconiq_qr"></div>
 
         <button id="buckaroo_magento2_payconiq_cancel" type="button" title="Cancel" data-bind="click: cancelPayment">
-            <span><?= __('Cancel')?></span>
+            <span><?= /* @noEscape */ __('Cancel')?></span>
         </button>
     </div>
 </div>
 
 <script>
     require(['buckaroo/payconiq/pay'], function (payconiqPay) {
-        var transactionKey = "<?= $block->getTransactionKey(); ?>";
+        var transactionKey = "<?= /* @noEscape */ $block->getTransactionKey(); ?>";
 
         payconiqPay.setTransactionKey(transactionKey);
         payconiqPay.showQrCode();
