BP-680 Add Klarna 'Pay' and 'PayInInstallments'

--- a/view/adminhtml/web/css/sales_styles.css
+++ b/view/adminhtml/web/css/sales_styles.css
@@ -70,7 +70,9 @@
 .buckaroo_magento2_payment_card_cartebancaire,
 .buckaroo_magento2_payment_card_dankort,
 .buckaroo_magento2_payment_card_nexi,
+.buckaroo_magento2_payment_klarna,
 .buckaroo_magento2_payment_klarnakp,
+.buckaroo_magento2_payment_klarnain,
 .buckaroo_magento2_payment_capayablein3,
 .buckaroo_magento2_payment_capayablepostpay,
 .buckaroo_magento2_payment_pospayment
@@ -301,7 +303,9 @@
 }
 
 /* Klarna */
-.buckaroo_magento2_payment_klarnakp:before {
+.buckaroo_magento2_payment_klarna:before,
+.buckaroo_magento2_payment_klarnakp:before,
+.buckaroo_magento2_payment_klarnain:before {
     background: url(../images/buckaroo_magento2_klarnakp_title.png) no-repeat;
     float: left;
     margin-right: 10px;
