--- a/view/frontend/web/css/styles.css
+++ b/view/frontend/web/css/styles.css
@@ -60,7 +60,9 @@
     .buckaroo_magento2_giropay .payment-method-second-col,
     .buckaroo_magento2_payperemail .payment-method-second-col,
     .buckaroo_magento2_paymentguarantee .payment-method-second-col,
+    .buckaroo_magento2_klarna .payment-method-second-col,
     .buckaroo_magento2_klarnakp .payment-method-second-col,
+    .buckaroo_magento2_klarnain .payment-method-second-col,
     .buckaroo_magento2_emandate .payment-method-second-col,
     .buckaroo_magento2_applepay .payment-method-second-col,
     .buckaroo_magento2_capayablein3 .payment-method-second-col,
@@ -87,7 +89,9 @@
     .buckaroo_magento2_giropay .payment-method-billing-address,
     .buckaroo_magento2_payperemail .payment-method-billing-address,
     .buckaroo_magento2_paymentguarantee .payment-method-billing-address,
+    .buckaroo_magento2_klarna .payment-method-billing-address,
     .buckaroo_magento2_klarnakp .payment-method-billing-address,
+    .buckaroo_magento2_klarnain .payment-method-billing-address,
     .buckaroo_magento2_emandate .payment-method-billing-address,
     .buckaroo_magento2_applepay .payment-method-billing-address,
     .buckaroo_magento2_capayablein3 .payment-method-billing-address,
@@ -117,7 +121,9 @@
     .magento-blank .buckaroo_magento2_giropay .fieldset > .field:not(.choice) > .label,
     .magento-blank .buckaroo_magento2_payperemail .fieldset > .field:not(.choice) > .label,
     .magento-blank .buckaroo_magento2_paymentguarantee .fieldset > .field:not(.choice) > .label,
+    .magento-blank .buckaroo_magento2_klarna .fieldset > .field:not(.choice) > .label,
     .magento-blank .buckaroo_magento2_klarnakp .fieldset > .field:not(.choice) > .label,
+    .magento-blank .buckaroo_magento2_klarnain .fieldset > .field:not(.choice) > .label,
     .magento-blank .buckaroo_magento2_emandate .fieldset > .field:not(.choice) > .label,
     .magento-blank .buckaroo_magento2_applepay .fieldset > .field:not(.choice) > .label,
     .magento-blank .buckaroo_magento2_capayablein3 .fieldset > .field:not(.choice) > .label,
@@ -144,7 +150,9 @@
     .magento-blank .buckaroo_magento2_giropay .fieldset > .field:not(.choice) > .control,
     .magento-blank .buckaroo_magento2_payperemail .fieldset > .field:not(.choice) > .control,
     .magento-blank .buckaroo_magento2_paymentguarantee .fieldset > .field:not(.choice) > .control,
+    .magento-blank .buckaroo_magento2_klarna .fieldset > .field:not(.choice) > .control,
     .magento-blank .buckaroo_magento2_klarnakp .fieldset > .field:not(.choice) > .control,
+    .magento-blank .buckaroo_magento2_klarnain .fieldset > .field:not(.choice) > .control,
     .magento-blank .buckaroo_magento2_emandate .fieldset > .field:not(.choice) > .control,
     .magento-blank .buckaroo_magento2_applepay .fieldset > .field:not(.choice) > .control,
     .magento-blank .buckaroo_magento2_capayablein3 .fieldset > .field:not(.choice) > .control,
@@ -169,7 +177,9 @@
     .magento-blank .buckaroo_magento2_giropay .fieldset > .field.choice:before,
     .magento-blank .buckaroo_magento2_payperemail .fieldset > .field.choice:before,
     .magento-blank .buckaroo_magento2_paymentguarantee .fieldset > .field.choice:before,
+    .magento-blank .buckaroo_magento2_klarna .fieldset > .field.choice:before,
     .magento-blank .buckaroo_magento2_klarnakp .fieldset > .field.choice:before,
+    .magento-blank .buckaroo_magento2_klarnain .fieldset > .field.choice:before,
     .magento-blank .buckaroo_magento2_emandate .fieldset > .field.choice:before,
     .magento-blank .buckaroo_magento2_applepay .fieldset > .field.choice:before,
     .magento-blank .buckaroo_magento2_capayablein3 .fieldset > .field.choice:before,
@@ -643,7 +653,9 @@
 }
 
 /* ======================= Klarna ======================== */
-.buckaroo_magento2_klarnakp .buckaroo_magento2_image_title:after {
+.buckaroo_magento2_klarna .buckaroo_magento2_image_title:after, 
+.buckaroo_magento2_klarnakp .buckaroo_magento2_image_title:after, 
+.buckaroo_magento2_klarnain .buckaroo_magento2_image_title:after {
     background: url(../images/buckaroo_magento2_klarnakp_title.png) no-repeat;
     float: right;
     margin-right: 3px;
@@ -654,7 +666,9 @@
     content: ' ';
 }
 
-.buckaroo_magento2_klarnakp .payment-method-second-col input:disabled {
+.buckaroo_magento2_klarna .payment-method-second-col input:disabled,
+.buckaroo_magento2_klarnakp .payment-method-second-col input:disabled,
+.buckaroo_magento2_klarnain .payment-method-second-col input:disabled {
     color: #999;
     background: #f2f2f2;
     border: 1px solid #b6b6b6;
@@ -991,7 +1005,9 @@
     }
 
     /* Klarna */
-    .buckaroo_magento2_klarnakp .buckaroo_magento2_image_title:before {
+    .buckaroo_magento2_klarna .buckaroo_magento2_image_title:before,
+    .buckaroo_magento2_klarnakp .buckaroo_magento2_image_title:before,
+    .buckaroo_magento2_klarnain .buckaroo_magento2_image_title:before {
         background: url(../images/buckaroo_magento2_klarnakp_title.png) no-repeat;
         margin-top: -1px;
         float: left;
