BP-690 Magento 2 - Recognize creditcard brand in checkout

--- a/view/frontend/web/template/payment/buckaroo_magento2_creditcards.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_creditcards.html
@@ -76,7 +76,7 @@
                             value: CardNumber,
                             textInput: CardNumber(),
                             attr: { 'data-validate': JSON.stringify({ 'required': true, 'validateCardNumber': true }) },
-                            event: { blur: encryptCardDetails }">
+                            event: { blur: encryptCardDetails, change: processCard }">
                             </div>
                         </div>
 
